<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:fbutton="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.vpage.vcars.chat.JoinChatActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textColorHint="@color/LiteGray"
                android:hint="@string/prompt_username"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:maxLines="1"
                android:singleLine="true"/>

        <info.hoang8f.widget.FButton
            fbutton:buttonColor="@color/common_button_color"
            fbutton:shadowColor="@color/LiteGray"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:id="@+id/sign_in_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:background="@android:color/transparent"
            android:textSize="@dimen/common_button_text_size"
            android:textAllCaps="false">
        </info.hoang8f.widget.FButton>

    </LinearLayout>
</ScrollView>
