<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:id="@+id/homeloginbackground"
        android:visibility="visible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/splash_container"
            android:layout_marginBottom="@dimen/splashScreen_splash_container_marginBottom">
            <ImageView
                android:layout_width="@dimen/splashScreen_splash_oustboy_width"
                android:layout_height="@dimen/splashScreen_splash_oustboy_height"
                android:id="@+id/splash_image"
                android:src="@drawable/appicon"
                android:layout_marginBottom="@dimen/splashScreen_splash_oustboy_marginBottom"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:layout_below="@id/splash_image"
                android:text="@string/vCarText"
                android:id="@+id/homestudy_textview"
                android:visibility="visible"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/splashScreen_study_textview_marginRight"
                android:textSize="@dimen/splashScreen_study_textview_textSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:layout_below="@id/homestudy_textview"
                android:text="@string/vCarNextText"
                android:textStyle="bold"
                android:id="@+id/homerank_textview"
                android:visibility="visible"
                android:textColor="@color/Black"
                android:layout_marginLeft="@dimen/splashScreen_rank_textview_marginLeft"
                android:layout_marginBottom="@dimen/splashScreen_rank_textview_marginBottom"
                android:textSize="@dimen/splashScreen_rank_textview_textSize"/>
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:id="@+id/relativeLayout8" >
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/homeLayout">

            <com.vpage.vcars.view.PlayGifView
                android:id="@+id/viewGif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:visibility="gone" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:id="@+id/loging_layout"
                android:layout_height="match_parent"
                android:weightSum="4"
                android:gravity="bottom|center_vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginScreen_logingLayoutChildLayout_height"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:weightSum="1"
                    android:layout_marginLeft="@dimen/loginScreen_logingLayoutChildLayout_marginLeft"
                    android:layout_marginRight="@dimen/loginScreen_logingLayoutChildLayout_marginRight"
                    android:background="@color/Blue">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/fbimgLayout"
                        android:layout_width="@dimen/loginScreen_fbimgLayout_width"
                        android:layout_height="@dimen/loginScreen_fbimgLayout_height"
                        android:gravity="center|center_vertical">
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/imgfbIcon"
                            android:src="@drawable/fbicon"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center|center_vertical">
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/fb"
                            android:id="@+id/fbLoginButton"
                            android:textAllCaps="false"
                            android:gravity="center|center_horizontal"
                            android:background="@android:color/transparent"
                            android:textColor="@color/White"
                            android:layout_marginRight="20dp"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginScreen_logingLayoutChildLayout_height"
                    android:weightSum="1"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/loginScreen_logingLayoutChildLayout_marginTop"
                    android:layout_marginRight="@dimen/loginScreen_logingLayoutChildLayout_marginRight"
                    android:layout_marginLeft="@dimen/loginScreen_logingLayoutChildLayout_marginLeft"
                    android:background="@color/Red">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:id="@+id/imggoogleplusLayout"
                                android:layout_width="@dimen/loginScreen_imggoogleplusLayout_width"
                                android:layout_height="@dimen/loginScreen_imggoogleplusLayout_height"
                                android:gravity="center|center_vertical">
                                <ImageView
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:id="@+id/imgGooglePlusIcon"
                                    android:src="@drawable/gp"/>
                            </LinearLayout>
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent">
                                <Button
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:text="@string/gPlus"
                                    android:textAllCaps="false"
                                    android:id="@+id/gLoginButton"
                                    android:gravity="center|center_vertical"
                                    android:background="@android:color/transparent"
                                    android:textColor="@color/White"
                                    android:layout_marginRight="20dp"
                                    android:textSize="14sp"
                                    android:visibility="visible" />
                            </LinearLayout>
                    </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginScreen_logingLayoutChildLayout_height"
                    android:weightSum="1"
                    android:layout_marginTop="@dimen/loginScreen_logingLayoutChildLayout_marginTop"
                    android:layout_marginRight="@dimen/loginScreen_logingLayoutChildLayout_marginRight"
                    android:layout_marginLeft="@dimen/loginScreen_logingLayoutChildLayout_marginLeft"
                    android:gravity="center_vertical">
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@color/colorAccent"
                            android:textColor="@color/White"
                            android:textSize="14sp"
                            android:text="@string/login"
                            android:id="@+id/loginButton" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:weightSum="1"
                    android:layout_marginTop="@dimen/loginScreen_hyperLinkLayoutParentLayout_marginTop"
                    android:layout_marginRight="@dimen/loginScreen_hyperLinkLayoutParentLayout_marginRight"
                    android:layout_marginLeft="@dimen/loginScreen_hyperLinkLayoutParentLayout_marginLeft"
                    android:paddingTop="@dimen/loginScreen_hyperLinkLayoutParentLayout_paddingTop">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/hyperLinkLayout">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/firstLineLayout">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/referText"
                                android:text="@string/referText"
                                android:textColor="@color/LiteGray"
                                android:gravity="center|center_vertical"
                                android:textSize="@dimen/loginScreen_referText_textSize"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/secondLineLayout"
                            android:layout_gravity="center"
                            android:layout_below="@+id/firstLineLayout"
                            android:layout_centerHorizontal="true"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/loginScreen_termsText_marginTop"
                                android:clickable="true"
                                android:id="@+id/termsText"
                                android:text="@string/termsText"
                                android:textColor="@color/Orange"
                                android:gravity="center|center_vertical"
                                android:textSize="@dimen/loginScreen_termsText_textSize"
                                android:layout_marginLeft="@dimen/loginScreen_termsText_marginLeft"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/loginScreen_andText_marginLeft"
                                android:layout_marginRight="@dimen/loginScreen_andText_marginRight"
                                android:id="@+id/andText"
                                android:text="@string/andText"
                                android:textColor="@color/LiteGray"
                                android:gravity="center|center_vertical"
                                android:textSize="@dimen/loginScreen_andText_textSize"
                                android:layout_alignTop="@+id/termsText"
                                android:layout_toRightOf="@+id/termsText"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/loginScreen_privacyText_marginRight"
                                android:id="@+id/privacyText"
                                android:text="@string/privacyText"
                                android:clickable="true"
                                android:textColor="@color/Orange"
                                android:gravity="center|center_vertical"
                                android:textSize="@dimen/loginScreen_privacyText_textSize"
                                android:layout_alignTop="@+id/termsText"
                                android:layout_toRightOf="@+id/andText"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/labsText"
                                android:text="@string/vcarText"
                                android:textColor="@color/LiteGray"
                                android:gravity="center_vertical|left"
                                android:textSize="@dimen/loginScreen_labsText_textSize"
                                android:layout_centerHorizontal="true"
                                android:layout_toRightOf="@+id/privacyText"
                                android:layout_marginTop="@dimen/loginScreen_labsText_marginTop"
                                android:singleLine="true"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>